okd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: itopcptoolkit
  labels:
    app: itopcptoolkit
spec:
  selector:
    app: itopcptoolkit
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
