okd/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: itopcptoolkit
  labels:
    app: itopcptoolkit
  annotations:
    # Make the route accessible outside the CERN network
    haproxy.router.openshift.io/ip_whitelist: ""
spec:
  host: itopcptoolkit.web.cern.ch
  to:
    kind: Service
    name: itopcptoolkit
  port:
    targetPort: 5000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
